Fix spacing

--- a/app/assets/stylesheets/_core.scss
+++ b/app/assets/stylesheets/_core.scss
@@ -1,5 +1,5 @@
 form{
-	margin-bottom: 0;
+	margin-bottom: 20px;
 }
 
 .clearfix:before,
@@ -20,7 +20,7 @@ html.home{
 }
 
 #home{
-	padding-bottom: 50px;
+	padding-bottom: 180px;
   min-width: 411px;
 }
 
